Took care of several warnings.