@@ -172,7 +172,7 @@ public class TableColumnAdjuster implements PropertyChangeListener, TableModelLi
 			width = Math.min(width, tableColumn.getPreferredWidth());	
 		}
 
-		columnSizes.put(tableColumn, new Integer(tableColumn.getWidth()));
+		columnSizes.put(tableColumn, Integer.valueOf(tableColumn.getWidth()));
 		table.getTableHeader().setResizingColumn(tableColumn);
 		tableColumn.setWidth(width);
 	}
